// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/PostFlagIcon should match snapshot 1`] = `
<div>
  <button
    aria-label="save message"
    class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 post-menu__item"
    id="CENTER_flagIcon_post_id"
    type="button"
  >
    <span
      aria-hidden="true"
      class="_icon-button__icon-slot_g2m23_33"
    >
      <div
        aria-hidden="true"
        class="_icon_1i355_2 _icon--size-16_1i355_38"
      >
        <div
          class="_icon__glyph-area_1i355_9"
        >
          <svg
            fill="currentColor"
            height="18"
            version="1.1"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17,18l-5-2.18L7,18V5h10 M17,3H7C5.895,3,5,3.895,5,5v16l7-3l7,3V5C19,3.89,18.1,3,17,3z"
            />
          </svg>
        </div>
      </div>
    </span>
  </button>
</div>
`;

exports[`components/post_view/PostFlagIcon should match snapshot 2`] = `
<div>
  <button
    aria-label="remove from saved"
    class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--padding-compact_g2m23_64 _icon-button--active_g2m23_25 post-menu__item post-menu__item--active"
    data-active="true"
    id="CENTER_flagIcon_post_id"
    type="button"
  >
    <span
      aria-hidden="true"
      class="_icon-button__icon-slot_g2m23_33"
    >
      <div
        aria-hidden="true"
        class="_icon_1i355_2 _icon--size-16_1i355_38"
      >
        <div
          class="_icon__glyph-area_1i355_9"
        >
          <svg
            fill="currentColor"
            height="18"
            version="1.1"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
            />
          </svg>
        </div>
      </div>
    </span>
  </button>
</div>
`;
